Modified file: CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.28)
-project(progettopf VERSION 0.1.0)
+project(project VERSION 0.1.0)
 
 # abilita il supporto per i test, tra cui l'opzione BUILD_TESTING usata sotto
 include(CTest)
@@ -37,9 +37,9 @@ find_package(SFML 2.6 COMPONENTS graphics REQUIRED)
 
 # dichiara un eseguibile chiamato "progetto", prodotto a partire dai file sorgente indicati
 # sostituire "progetto" con il nome del proprio eseguibile e i file sorgente con i propri (con nomi sensati!)
-add_executable(progetto main.cpp file1.cpp file2.cpp)
+add_executable(project src/main.cpp src/simulation.cpp src/renderer.cpp)
 # nel caso si usi SFML. analogamente per eventuali altre librerie
-target_link_libraries(progetto PRIVATE sfml-graphics)
+target_link_libraries(project PRIVATE sfml-graphics)
 
 # aggiungere eventuali altri eseguibili
 
@@ -48,8 +48,12 @@ target_link_libraries(progetto PRIVATE sfml-graphics)
 if (BUILD_TESTING)
 
   # aggiungi l'eseguibile progetto.t
-  add_executable(progetto.t file.t.cpp)
+  add_executable(project_test src/simulation.cpp test/simulation_test.cpp)
+  # include directory (per header e doctest.h)
+  target_include_directories(project_tests PRIVATE 
+    include
+    ${CMAKE_CURRENT_SOURCE_DIR})
   # aggiungi l'eseguibile progetto.t alla lista dei test
-  add_test(NAME progetto.t COMMAND progetto.t)
+  add_test(NAME project_test COMMAND project_test)
 
 endif()
