--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,22 +33,24 @@ endif()
 string(APPEND CMAKE_EXE_LINKER_FLAGS_DEBUG " -fsanitize=address,undefined")
 
 # se usato, richiedi il componente graphics della libreria SFML (versione 2.6 in Ubuntu 24.04)
-find_package(SFML 2.6 COMPONENTS graphics REQUIRED)
+find_package(SFML 2.6 REQUIRED COMPONENTS graphics window system)
 
 # dichiara un eseguibile chiamato "progetto", prodotto a partire dai file sorgente indicati
 # sostituire "progetto" con il nome del proprio eseguibile e i file sorgente con i propri (con nomi sensati!)
 add_executable(project src/main.cpp src/simulation.cpp src/renderer.cpp io/output.cpp)
 # nel caso si usi SFML. analogamente per eventuali altre librerie
-target_link_libraries(project PRIVATE sfml-graphics)
+target_link_libraries(project PRIVATE sfml-graphics sfml-window sfml-system)
 
-# aggiungere eventuali altri eseguibili
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/font.ttf DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 # il testing e' abilitato di default
 # per disabilitarlo, passare -DBUILD_TESTING=OFF a cmake durante la fase di configurazione
 if (BUILD_TESTING)
 
   # aggiungi l'eseguibile progetto.t
-  add_executable(project_test src/simulation.cpp test/simulation_test.cpp)
+  add_executable(project_test src/simulation.cpp src/renderer.cpp test/main_test.cpp test/simulation_test.cpp test/renderer_test.cpp)
+  # nel caso si usi SFML. analogamente per eventuali altre librerie
+  target_link_libraries(project_test PRIVATE sfml-graphics sfml-window sfml-system)
   # include directory (per header e doctest.h)
   target_include_directories(project_test PRIVATE 
     include
