--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,66 +1,66 @@
 cmake_minimum_required(VERSION 3.28)
 project(project VERSION 0.1.0)
-
-# abilita il supporto per i test, tra cui l'opzione BUILD_TESTING usata sotto
 include(CTest)
-
-# esporta il compilation database, utile per altri strumenti, a partire dall'editor
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# richiedi l'uso di C++20 (volendo anche C++23), senza estensioni non-standard offerte dal compilatore usato
+# c++20
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# abilita warning
+# warning
 string(APPEND CMAKE_CXX_FLAGS
       " -Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion"
       " -Wshadow -Wimplicit-fallthrough -Wextra-semi -Wold-style-cast"
       " -fno-omit-frame-pointer")
 
-# abilita asserzioni della standard library
+# stl assertions
 if (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
   string(APPEND CMAKE_CXX_FLAGS " -D_GLIBCXX_ASSERTIONS")
 elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   string(APPEND CMAKE_CXX_FLAGS " -D_LIBCPP_HARDENING_MODE=_LIBCPP_HARDENING_MODE_EXTENSIVE")
 endif()
 
-# abilita address sanitizer e undefined-behaviour sanitizer in Debug mode
+# address sanitizer and undefined-behaviour sanitizer in Debug mode
 string(APPEND CMAKE_CXX_FLAGS_DEBUG " -fsanitize=address,undefined")
 if (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
   string(APPEND CMAKE_CXX_FLAGS " -D_GLIBCXX_SANITIZE_STD_ALLOCATOR")
 endif()
 string(APPEND CMAKE_EXE_LINKER_FLAGS_DEBUG " -fsanitize=address,undefined")
 
-# se usato, richiedi il componente graphics della libreria SFML (versione 2.6 in Ubuntu 24.04)
+# sfml
 find_package(SFML 2.6 COMPONENTS graphics REQUIRED)
 
-# dichiara un eseguibile chiamato "progetto", prodotto a partire dai file sorgente indicati
-# sostituire "progetto" con il nome del proprio eseguibile e i file sorgente con i propri (con nomi sensati!)
-add_executable(project src/main.cpp src/simulation.cpp src/renderer.cpp io/output.cpp io/input.cpp)
-# nel caso si usi SFML. analogamente per eventuali altre librerie
-target_link_libraries(project PRIVATE sfml-graphics)
+# core library
+add_library(core STATIC
+    src/simulation.cpp
+    src/renderer.cpp
+    io/input.cpp
+    io/output.cpp
+)
+target_include_directories(core PUBLIC
+    include
+    ${CMAKE_CURRENT_SOURCE_DIR}
+)
+target_link_libraries(core PUBLIC sfml-graphics)
+
+# main executable named "project"
+add_executable(project src/main.cpp)
+target_link_libraries(project PRIVATE core)
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/font.ttf DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
-# il testing e' abilitato di default
-# per disabilitarlo, passare -DBUILD_TESTING=OFF a cmake durante la fase di configurazione
+# test (to disable test, type command -DBUILD_TESTING=off)
 if (BUILD_TESTING)
 
-  # aggiungi l'eseguibile progetto.t
-  add_executable(simulation_test src/simulation.cpp io/output.cpp test/simulation_test.cpp)
-  # aggiungi l'eseguibile progetto.t alla lista dei test
+  # simulation test executable named "simulation_test"
+  add_executable(simulation_test test/simulation_test.cpp)
+  target_link_libraries(simulation_test PRIVATE core)
   add_test(NAME simulation_test COMMAND simulation_test)
 
-  # aggiungi l'eseguibile progetto.t
-  add_executable(renderer_test src/simulation.cpp src/renderer.cpp test/renderer_test.cpp)
-  # nel caso si usi SFML. analogamente per eventuali altre librerie
-  target_link_libraries(renderer_test PRIVATE sfml-graphics)
-  # include directory (per header e doctest.h)
-  target_include_directories(renderer_test PRIVATE 
-    include
-    ${CMAKE_CURRENT_SOURCE_DIR})
-  # aggiungi l'eseguibile progetto.t alla lista dei test
+  # renderer test executable named "renderer_test"
+  add_executable(renderer_test test/renderer_test.cpp)
+  target_link_libraries(renderer_test PRIVATE core)
   add_test(NAME renderer_test COMMAND renderer_test)
 
 endif()
